update:添加部分实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ include(cmake/cmake_env.cmake)
 cmake_minimum_required(VERSION 3.15)
 project(cvAutoTrack.Inface)
 
-add_library(cvAutoTrack.Inface SHARED)
+add_subdirectory(source)
