--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,15 @@ include(cmake/cmake_env.cmake)
 
 cmake_minimum_required(VERSION 3.15)
 project(cvAutoTrack.Inface)
+set(BUILD_TESTS OFF CACHE BOOL "Build tests")
+set(BUILD_EXAMPLES OFF CACHE BOOL "Build examples")
+set(BUILD_TESTS ON)
 
 add_subdirectory(source)
+if(BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
+if(BUILD_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
