--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,10 +14,9 @@ env:
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+    outputs:
+      version: ${{ steps.get_version.outputs._version }}
 
     steps:
     - uses: actions/checkout@v3
@@ -36,4 +35,19 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+   
+    # - name: Get the Version
+    #   id: get_version
+    #   run: |
+    #     $version = (Get-Content -Path ${{github.workspace}}/build/bin/Release/version -TotalCount 1).Trim()
+    #     echo "dll version: $version"
+    #     echo "_version=$version" >> $env:GITHUB_OUTPUT
+
+    - name: Upload a Build Artifact for Release
+      uses: actions/upload-artifact@v3
+      with:
+        name: cvAutoTrack.Inface
+        path: ${{github.workspace}}/build/bin/Release/cvAutoTrack.Inface.dll
+        if-no-files-found: 'warn'
+    
 
