update:调整头文件

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_library(cvAutoTrack.Inface SHARED)
 target_compile_definitions(cvAutoTrack.Inface PRIVATE -DCVAUTOTRACE_INFACE_EXPORTS)
+target_include_directories(cvAutoTrack.Inface PRIVATE ${inface_INCLUDE_DIR})
 target_sources(cvAutoTrack.Inface 
 INTERFACE
-        cvAutoTrack.Inface.h
+        ${inface_INCLUDE_DIR}/cvAutoTrack.Inface.h
 PRIVATE
         cvAutoTrack.Inface.cpp
 )
