--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(cvAutoTrack.Inface SHARED)
 target_compile_definitions(cvAutoTrack.Inface PRIVATE -DCVAUTOTRACE_INFACE_EXPORTS)
+target_compile_options(cvAutoTrack.Inface PRIVATE /utf-8)
 target_include_directories(cvAutoTrack.Inface PRIVATE ${inface_INCLUDE_DIR})
 target_sources(cvAutoTrack.Inface 
 INTERFACE
