feat:添加版本号接口

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,14 @@ set(BUILD_TESTS ON)
 set(inface_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(inface_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
+#=======================================================================================================================
+include(cmake/parse_version.cmake)
+auto_increment_version_file("source/resource/version.hash" "source/resource/version.ver")
+parse_version_file("source/resource/version.ver")
+get_commit_hash(PROJECT_VERSION_HASH)
+get_git_branch(PROJECT_VERSION_BRANCH)
+#=======================================================================================================================
+
 
 add_subdirectory(source)
 if(BUILD_EXAMPLES)
