--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,7 +1,9 @@
+configure_file(resource/resource.version.hpp.in resource.version.hpp @ONLY)
+
 add_library(cvAutoTrack.Inface SHARED)
 target_compile_definitions(cvAutoTrack.Inface PRIVATE -DCVAUTOTRACE_INFACE_EXPORTS)
 target_compile_options(cvAutoTrack.Inface PRIVATE /utf-8)
-target_include_directories(cvAutoTrack.Inface PRIVATE ${inface_INCLUDE_DIR})
+target_include_directories(cvAutoTrack.Inface PRIVATE ${inface_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 target_sources(cvAutoTrack.Inface 
 INTERFACE
         ${inface_INCLUDE_DIR}/cvAutoTrack.Inface.h
