--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -21,7 +21,7 @@ jobs:
       #
       # To add more build types (Release, Debug, RelWithDebInfo, etc.) customize the build_type list.
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ windows-latest]
         build_type: [Release]
         c_compiler: [gcc, cl]
         include:
@@ -43,7 +43,7 @@ jobs:
             c_compiler: cl
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -73,7 +73,7 @@ jobs:
       run: ctest --build-config ${{ matrix.build_type }}
 
     - name: Upload a Build Artifact for Release
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: cvAutoTrack.Inface-${{ matrix.os }}-${{ matrix.c_compiler }}
         path: ${{ github.workspace }}/${{ matrix.output_file }}
